k8s/web-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  namespace: schoolproject
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-name: schoolproject-web-lb
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-port: "80"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: /healthz
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
